:bug: Fix display: flex problem for fallback visible-* & hidden-*

--- a/packages/peper-ui/client/css/peper.css
+++ b/packages/peper-ui/client/css/peper.css
@@ -3538,6 +3538,8 @@ section {
 
   .visible-xs {
     display: block; }
+    .visible-xs.row, .visible-xs.flex {
+      display: flex; }
 
   .hidden-xd,
   .hidden-sm,
@@ -3545,6 +3547,16 @@ section {
   .hidden-lg,
   .hidden-xlg {
     display: block; }
+    .hidden-xd.row, .hidden-xd.flex,
+    .hidden-sm.row,
+    .hidden-sm.flex,
+    .hidden-md.row,
+    .hidden-md.flex,
+    .hidden-lg.row,
+    .hidden-lg.flex,
+    .hidden-xlg.row,
+    .hidden-xlg.flex {
+      display: flex; }
 
   .hidden-xs {
     display: none !important; } }
@@ -3558,6 +3570,8 @@ section {
 
   .visible-xd {
     display: block; }
+    .visible-xd.row, .visible-xd.flex {
+      display: flex; }
 
   .hidden-xs,
   .hidden-sm,
@@ -3565,6 +3579,16 @@ section {
   .hidden-lg,
   .hidden-xlg {
     display: block; }
+    .hidden-xs.row, .hidden-xs.flex,
+    .hidden-sm.row,
+    .hidden-sm.flex,
+    .hidden-md.row,
+    .hidden-md.flex,
+    .hidden-lg.row,
+    .hidden-lg.flex,
+    .hidden-xlg.row,
+    .hidden-xlg.flex {
+      display: flex; }
 
   .hidden-xd {
     display: none !important; } }
@@ -3578,6 +3602,8 @@ section {
 
   .visible-sm {
     display: block; }
+    .visible-sm.row, .visible-sm.flex {
+      display: flex; }
 
   .hidden-xs,
   .hidden-xd,
@@ -3585,6 +3611,16 @@ section {
   .hidden-lg,
   .hidden-xlg {
     display: block; }
+    .hidden-xs.row, .hidden-xs.flex,
+    .hidden-xd.row,
+    .hidden-xd.flex,
+    .hidden-md.row,
+    .hidden-md.flex,
+    .hidden-lg.row,
+    .hidden-lg.flex,
+    .hidden-xlg.row,
+    .hidden-xlg.flex {
+      display: flex; }
 
   .hidden-sm {
     display: none !important; } }
@@ -3598,6 +3634,8 @@ section {
 
   .visible-md {
     display: block; }
+    .visible-md.row, .visible-md.flex {
+      display: flex; }
 
   .hidden-xs,
   .hidden-xd,
@@ -3605,6 +3643,16 @@ section {
   .hidden-lg,
   .hidden-xlg {
     display: block; }
+    .hidden-xs.row, .hidden-xs.flex,
+    .hidden-xd.row,
+    .hidden-xd.flex,
+    .hidden-sm.row,
+    .hidden-sm.flex,
+    .hidden-lg.row,
+    .hidden-lg.flex,
+    .hidden-xlg.row,
+    .hidden-xlg.flex {
+      display: flex; }
 
   .hidden-md {
     display: none !important; } }
@@ -3618,6 +3666,8 @@ section {
 
   .visible-lg {
     display: block; }
+    .visible-lg.row, .visible-lg.flex {
+      display: flex; }
 
   .hidden-xs,
   .hidden-xd,
@@ -3625,6 +3675,16 @@ section {
   .hidden-md,
   .hidden-xlg {
     display: block; }
+    .hidden-xs.row, .hidden-xs.flex,
+    .hidden-xd.row,
+    .hidden-xd.flex,
+    .hidden-sm.row,
+    .hidden-sm.flex,
+    .hidden-md.row,
+    .hidden-md.flex,
+    .hidden-xlg.row,
+    .hidden-xlg.flex {
+      display: flex; }
 
   .hidden-lg {
     display: none !important; } }
@@ -3638,6 +3698,8 @@ section {
 
   .visible-xlg {
     display: block; }
+    .visible-xlg.row, .visible-xlg.flex {
+      display: flex; }
 
   .hidden-xs,
   .hidden-xd,
@@ -3645,6 +3707,16 @@ section {
   .hidden-md,
   .hidden-lg {
     display: block; }
+    .hidden-xs.row, .hidden-xs.flex,
+    .hidden-xd.row,
+    .hidden-xd.flex,
+    .hidden-sm.row,
+    .hidden-sm.flex,
+    .hidden-md.row,
+    .hidden-md.flex,
+    .hidden-lg.row,
+    .hidden-lg.flex {
+      display: flex; }
 
   .hidden-xlg {
     display: none !important; } }
@@ -6790,7 +6862,12 @@ button.color-button, a.color-button {
   border-radius: 2px;
   background-clip: padding-box;
   overflow: hidden;
-  margin-bottom: 12px; }
+  margin-bottom: 12px;
+  -webkit-transition: all 0.2s cubic-bezier(0.4, 0, 0.6, 1);
+  -moz-transition: all 0.2s cubic-bezier(0.4, 0, 0.6, 1);
+  -ms-transition: all 0.2s cubic-bezier(0.4, 0, 0.6, 1);
+  -o-transition: all 0.2s cubic-bezier(0.4, 0, 0.6, 1);
+  transition: all 0.2s cubic-bezier(0.4, 0, 0.6, 1); }
   .peper-cards-image {
     position: relative;
     overflow: hidden;
