--- a/packages/peper-ui/client/scss/peper/base/_grid.scss
+++ b/packages/peper-ui/client/scss/peper/base/_grid.scss
@@ -197,8 +197,6 @@
 }
 
 @media (min-width: 0) and (max-width: 479px) {
-
-
 	.visible-xd,
 	.visible-sm,
 	.visible-md,
@@ -209,6 +207,9 @@
 
 	.visible-xs {
 		display: block;
+		&.row, &.flex {
+			display: flex;
+		}
 	}
 
 	.hidden-xd,
@@ -217,6 +218,10 @@
 	.hidden-lg,
 	.hidden-xlg {
 		display: block;
+
+		&.row, &.flex {
+			display: flex;
+		}
 	}
 
 	.hidden-xs {
@@ -236,6 +241,9 @@
 
 	.visible-xd {
 		display: block;
+		&.row, &.flex {
+			display: flex;
+		}
 	}
 
 	.hidden-xs,
@@ -244,6 +252,9 @@
 	.hidden-lg,
 	.hidden-xlg {
 		display: block;
+		&.row, &.flex {
+			display: flex;
+		}
 	}
 
 	.hidden-xd {
@@ -263,6 +274,9 @@
 
 	.visible-sm {
 		display: block;
+		&.row, &.flex {
+			display: flex;
+		}
 	}
 
 	.hidden-xs,
@@ -271,6 +285,9 @@
 	.hidden-lg,
 	.hidden-xlg {
 		display: block;
+		&.row, &.flex {
+			display: flex;
+		}
 	}
 
 	.hidden-sm {
@@ -290,6 +307,9 @@
 
 	.visible-md {
 		display: block;
+		&.row, &.flex {
+			display: flex;
+		}
 	}
 
 	.hidden-xs,
@@ -298,6 +318,9 @@
 	.hidden-lg,
 	.hidden-xlg {
 		display: block;
+		&.row, &.flex {
+			display: flex;
+		}
 	}
 
 	.hidden-md {
@@ -317,6 +340,9 @@
 
 	.visible-lg {
 		display: block;
+		&.row, &.flex {
+			display: flex;
+		}
 	}
 
 	.hidden-xs,
@@ -325,6 +351,9 @@
 	.hidden-md,
 	.hidden-xlg {
 		display: block;
+		&.row, &.flex {
+			display: flex;
+		}
 	}
 
 	.hidden-lg {
@@ -343,6 +372,9 @@
 
 	.visible-xlg {
 		display: block;
+		&.row, &.flex {
+			display: flex;
+		}
 	}
 
 	.hidden-xs,
@@ -351,6 +383,9 @@
 	.hidden-md,
 	.hidden-lg {
 		display: block;
+		&.row, &.flex {
+			display: flex;
+		}
 	}
 
 	.hidden-xlg {
